# ledger-service

./: Cargo.toml  DESIGN_CHOICES.md  README.md
migration/src/: m20220101_000001_create_table.rs
src/: error.rs  lib.rs  main.rs
src/entities/: financial_records.rs  mod.rs  prelude.rs  record_type.rs  role.rs  status.rs  users.rs
src/handlers/: auth.rs  dashboard_handler.rs  mod.rs  record_handler.rs  user_handler.rs
src/middleware/: auth.rs
src/services/: dashboard_service.rs  mod.rs  record_service.rs  user_service.rs
tests/: auth_integration.rs  dashboard_integration.rs  record_api_integration.rs  record_integration.rs  user_integration.rs  validation_integration.rs
