[package]
name = "ledger-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
rust_decimal = "1.41.0"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"]}
uuid = { version = "1.23.0", features = ["v4"] }
migration = { path = "migration" }
sea-orm-migration = "1.1.20"
chrono = { version = "0.4.44", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
